FbsfConfig : add warning icon, avoid edit twice the same configuration.

--- a/Tools/FBSFConfig/qml.qrc
+++ b/Tools/FBSFConfig/qml.qrc
@@ -27,5 +27,6 @@
         <file>Components/PluginList.qml</file>
         <file>Components/SequenceItem.qml</file>
         <file>icons/filesaveas.png</file>
+        <file>icons/warning.png</file>
     </qresource>
 </RCC>
