FbsfConfig : check values in case of manual modifications, highlight errors in inspector

--- a/Tools/FBSFConfig/qml.qrc
+++ b/Tools/FBSFConfig/qml.qrc
@@ -28,5 +28,6 @@
         <file>Components/SequenceItem.qml</file>
         <file>icons/filesaveas.png</file>
         <file>icons/warning.png</file>
+        <file>CheckReport.qml</file>
     </qresource>
 </RCC>
