évolutions (date/time) du FbsfConfig editor fix du simuMpc dans 2 composants de library (Slider.qml et SwitchOnOff.qml)

--- a/Tools/FBSFConfig/qml.qrc
+++ b/Tools/FBSFConfig/qml.qrc
@@ -29,5 +29,7 @@
         <file>icons/filesaveas.png</file>
         <file>icons/warning.png</file>
         <file>CheckReport.qml</file>
+        <file>Inspectors/DatePicker.qml</file>
+        <file>icons/calendar.png</file>
     </qresource>
 </RCC>
