--- a/Tools/FBSFConfig/qml.qrc
+++ b/Tools/FBSFConfig/qml.qrc
@@ -33,5 +33,10 @@
         <file>icons/calendar.png</file>
         <file>Inspectors/TimePicker.qml</file>
         <file>icons/clock.png</file>
+        <file>icons/copy.png</file>
+        <file>icons/paste.png</file>
+        <file>icons/cut.png</file>
+        <file>icons/redo.png</file>
+        <file>icons/undo.png</file>
     </qresource>
 </RCC>
